# observatory

./: .gcloudignore  .gitignore  Cargo.toml  README.md  package.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: auto-publish.yml  publish-npm.yml  publish-on-tag.yml
.swarm/: state.json
agents/: HARDENING_GUIDE.md
agents/health-check/: package.json  tsconfig.json
agents/post-mortem-generator/: package.json  tsconfig.json
agents/shared/: package.json  tsconfig.json
agents/slo-enforcement/: AGENT_CONTRACT.md  package.json  tsconfig.json  vitest.config.ts
agents/telemetry-collector/: .gcloudignore  DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  deploy.sh  package.json  tsconfig.json
agents/usage-pattern/: VERIFICATION.md  package.json  tsconfig.json
agents/visualization-spec/: vitest.config.ts
benchmarks/output/: summary.md
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  mod.rs
crates/adapters/src/upstream/: config.rs  cost.rs  edge_agent.rs  inference_gateway.rs  latency.rs  mod.rs  orchestrator.rs  schema.rs  sentinel.rs
crates/benchmarks/: Cargo.toml
deploy/: DEPLOYMENT_MANIFEST.md  Dockerfile  cloudbuild.yaml  env.example  service-account.yaml
deploy/docs/: CLI_COMMANDS.md  ROLLBACK_PROCEDURES.md  VERIFICATION_CHECKLIST.md
deploy/scripts/: deploy.sh
deploy/service/: package-lock.json  package.json
docs/plans/: BENCHMARK_COMPLIANCE_REPORT.md
functions/: index.js
sdk/nodejs/: package.json
(+166 files in other folders)
