[package]
name = "llm-observatory-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Benchmark target adapters for LLM Observatory"

[dependencies]
llm-observatory-benchmarks = { path = "../benchmarks" }
serde.workspace = true
serde_json.workspace = true
